feat(ofertas): hace durable su expiración
